simple issue solved

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <h1 class="player">player-1</h1>
   <h4 class="chance"> chance : <span>5</span></h4>
   <h4 class="chance2"> chance : <span class="chance_s">5</span></h4>
-  <input class="player1box" type="password" placeholder="Enter the number">
+  <input class="player1box" type="text" placeholder="Enter the number">
   <button class="player1btn">start the game</button>
-  <input class="player2box" type="password" placeholder="Enter the number">
+  <input class="player2box" type="text" placeholder="Enter the number">
   <button class="player2btn">guess the number</button>
-  <input class="player3box" type="password" placeholder="Enter the number">
+  <input class="player3box" type="text" placeholder="Enter the number">
   <button class="player3btn">guess the number</button>
   <h3 class="error"></h3>
   <img src="./Winner.jpg" alt="img">
